# ray-tracer

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  log4rs.yml  renderer-739222d0987a1285.js  renderer-739222d0987a1285_bg.wasm  renderer-ebe9358fc9500dbf.js
asset/font/: LICENSE.txt
asset/shader/: default.wgsl  ray_tracing.wgsl  resolve.wgsl
src/: app.rs  color.rs  gui.rs  lib.rs  main.rs  math.rs  render.rs  rendering.rs  ui.rs  wgpu_context.rs
src/app/: camera.rs  egui_renderer.rs  gui_state.rs  input.rs  renderer.rs  scene.rs
src/gui/: egui.rs  state.rs
src/render/: bounding_box.rs  bvh.rs  context.rs  interval.rs  material.rs  primitive.rs  wgpu.rs
src/render/mesh/: cube.rs  mesh_list.rs
src/render/primitive/: quad.rs  sphere.rs  transformable.rs
src/render/wgpu/: bind_group.rs  buffer.rs  texture.rs
src/render/wgpu/buffer/: bind_buffer.rs  index_buffer.rs  vertex_buffer.rs
src/render/wgpu/pass/: compute_pass.rs  render_pass.rs
src/rendering/: Primitive.rs  aabb.rs  bounding_box.rs  bvh.rs  configuration.rs  egui_renderer.rs  interval.rs  material.rs  mesh.rs  primitive.rs  ray_tracing_context.rs  vertex.rs
src/rendering/graphics/: wgpu.rs
src/rendering/graphics/wgpu/: bind_group.rs  buffer.rs  render_pass.rs  textures.rs
src/rendering/graphics/wgpu/buffer/: bind_buffer.rs  index_buffer.rs  vertex_buffer.rs
src/rendering/graphics/wgpu/pass/: compute_pass.rs  render_pass.rs
src/rendering/graphics_api/: wgpu.rs
src/rendering/graphics_api/wgpu/: bind_group.rs  buffer.rs  texture.rs
src/rendering/graphics_api/wgpu/buffer/: bind_buffer.rs  index_buffer.rs  vertex_buffer.rs
src/rendering/graphics_api/wgpu/pass/: render_pass.rs
src/rendering/mesh/: cube.rs  mesh_list.rs
src/rendering/primitive/: cube.rs  quad.rs  sphere.rs  transformable.rs
src/rendering/wgpu/: bind_group.rs  buffer.rs  texture.rs
src/rendering/wgpu/buffer/: index_buffer.rs  vertex_buffer.rs
src/rendering/wgpu/pass/: compute_pass.rs  render_pass.rs
src/shader/: ray_tracing.wgsl
